# theater

./: COPYING  NEWS  README  meson.build  meson_options.txt  totem.doap
data/: meson.build  mime-type-imports.sh  mime-type-include.sh  mime-type-list.txt  org.gnome.Theater.desktop.in.in  org.gnome.Theater.service.in  org.gnome.theater.gschema.xml.in  playlist.ui  preferences.ui  shortcuts.ui  theater-video-thumbnailer.1  theater-video-thumbnailer.pod  theater.1  theater.convert  theater.pc.in  theater.thumbnailer.in  theater.ui
data/appdata/: meson.build  org.gnome.Theater.appdata.xml.in
data/icons/: meson.build
docs/reference/: meson.build  theater-docs.xml  theater-plugins.xml  theater-sections.txt  theater.types  version.xml.in
flatpak/: org.gnome.Theater.json
help/: ChangeLog  meson.build
help/C/: troubleshooting-debug.page
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/eu/: eu.po
help/fi/: fi.po
help/fr/: fr.po
help/gl/: gl.po
help/hr/: hr.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/ja/: ja.po
help/nb/: nb.po
help/oc/: oc.po
help/pa/: pa.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sl/: sl.po
help/sv/: sv.po
help/te/: te.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
help/zh_HK/: zh_HK.po
help/zh_TW/: zh_TW.po
po/: POTFILES.in  POTFILES.skip  be.po  be@latin.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  de.po  en_GB.po  es.po  fi.po  fur.po  ga.po  gu.po  he.po  hr.po  is.po  ka.po  kk.po  mai.po  mjw.po  mr.po  ms.po  nl.po  or.po  pa.po  pt.po  sl.po  te.po  th.po  wa.po  xh.po  zh_TW.po
src/: grilo.gresource.xml  grilo.ui  icon-helpers.c  icon-helpers.h  meson.build  test-icons.c  test-theater.c  theater-gallery-thumbnailer.c  theater-grilo.h  theater-interface.c  theater-interface.h  theater-main-toolbar.c  theater-main-toolbar.h  theater-menu.c  theater-menu.h  theater-object.c  theater-open-location.c  theater-open-location.h  theater-options.c  theater-playlist.c  theater-playlist.h  theater-preferences.h  theater-private.h  theater-resources.c  theater-resources.h  theater-search-entry.h  theater-selection-toolbar.c  theater-selection-toolbar.h  theater-subtitle-encoding.c  theater-subtitle-encoding.h  theater-uri.c  theater-uri.h  theater.c  theater.h  theatermaintoolbar.ui  theaterselectiontoolbar.ui  totem-grilo.c  totem-options.h  totem-preferences.c  totem-profile.h  (+4 more)
src/backend/: bacon-time-label.c  bacon-video-controls-actor.c  bacon-video-widget-gst-missing-plugins.c  bacon-video-widget.c  bacon-video-widget.h  bvw-test.c  meson.build  totem-aspect-frame.c  totem-aspect-frame.h
src/gst/: meson.build  theater-gst-pixbuf-helpers.c  theater-gst-pixbuf-helpers.h  theater-time-helpers.h  totem-gst-helpers.c  totem-gst-helpers.h  totem-time-helpers.c
src/plugins/: meson.build  theater-plugin.h  theater-plugins-engine.h  totem-dirs.c  totem-dirs.h  totem-plugins-engine.c
src/plugins/apple-trailers/: apple-trailers.plugin.desktop.in  meson.build  theater-apple-trailers.c
src/plugins/autoload-subtitles/: autoload-subtitles.plugin.desktop.in  meson.build  totem-autoload-subtitles.c
src/plugins/dbusservice/: dbusservice.py  meson.build
src/plugins/im-status/: meson.build  theater-im-status.c  totem-im-status.plugin.desktop.in
src/plugins/media-player-keys/: media-player-keys.plugin.desktop.in  meson.build  theater-media-player-keys.c
src/plugins/open-directory/: meson.build  totem-open-directory.c
src/plugins/opensubtitles/: meson.build  opensubtitles.convert  opensubtitles.plugin.desktop.in  opensubtitles.py  org.gnome.totem.plugins.opensubtitles.gschema.xml.in
src/plugins/properties/: bacon-video-widget-properties.c  meson.build  movie-properties.plugin.desktop.in  properties.gresource.xml  theater-movie-properties.c
src/plugins/pythonconsole/: console.py  meson.build  org.gnome.totem.plugins.pythonconsole.gschema.xml.in  pythonconsole.convert  pythonconsole.plugin.desktop.in  pythonconsole.py
src/plugins/recent/: meson.build  recent.plugin.desktop.in  totem-recent.c
src/plugins/rotation/: meson.build  rotation.plugin.desktop.in  theater-rotation.c
src/plugins/samplepython/: meson.build  samplepython.plugin.desktop.in  samplepython.py
src/plugins/save-file/: meson.build  theater-save-file.c
src/plugins/screensaver/: meson.build  screensaver.plugin.desktop.in  totem-screensaver.c
src/plugins/screenshot/: meson.build  screenshot.plugin.desktop.in  theater-gallery-progress.c  theater-gallery.c  totem-gallery-progress.h  totem-gallery.h  totem-screenshot-plugin.c  totem-screenshot-plugin.h
src/plugins/skipto/: meson.build  skipto.plugin.desktop.in  skipto.ui  theater-skipto-plugin.c  theater-skipto.c  theater-skipto.h  theater-time-entry.c  theater-time-entry.h
src/plugins/variable-rate/: meson.build  theater-variable-rate-plugin.c  variable-rate.plugin.desktop.in
src/plugins/vimeo/: meson.build  theater-vimeo.c  vimeo.plugin.desktop.in
