appdata = 'org.gnome.theater.appdata.xml'

i18n.merge_file ('appdata',
                 input: 'org.gnome.Theater.appdata.xml.in',
                 output: appdata,
                 install: true,
                 install_dir: join_paths(theater_datadir, 'metainfo'),
                 po_dir: po_dir,)
