install_data(
  join_paths('scalable', 'org.gnome.Theater.svg'),
  install_dir: join_paths(theater_datadir, 'icons', 'hicolor', 'scalable', 'apps')
)

install_data(
  join_paths('symbolic', 'org.gnome.Theater-symbolic.svg'),
  install_dir: join_paths(theater_datadir, 'icons', 'hicolor', 'symbolic', 'apps')
)
